# socbond1

./: CMakeLists.txt  Evo.cpp  EvoReci.cpp  EvoReci.hpp  Genotype.hpp  Group.hpp  Individual.hpp  Phenotype.hpp  Readme.md  Utils.cpp  Utils.hpp  hdf5code.cpp  hdf5code.hpp
Data/: Run16.toml  Run16_data.tsv  Run16_run.R  Run16d.toml  h5_funcs.R
